<resources>
    <string name="app_name">contacts</string>

    <string name="filter">filter</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_photo">Add Photo!</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="permission_required"> Permission Required</string>
    <string name="permission_req_dialog">If you want to use his feature, app needs this permission, please accept it</string>
    <string name="deny_from_dialog">No, i do not want to accept it</string>
    <string name="accept_from_dialog">I will accept it, so ask permission again</string>
    <string name="permission_message_from_snackbar">change permission in settings to access your contacts</string>
    <string name="permission_message_image">change permission in settings to access your images</string>
    <string name="settings">Settings</string>
    <string name="Package">Package</string>
    <string name="search_by_name_or_number">search by Name or Number</string>
    <string name="fill_fields">Fill all the fields</string>
    <string name="success">successfully added contact</string>
    <string name="error">something went wrong</string>
<!--    <string name="email">Email is not valid</string>-->
    <string name="add">add</string>
    <string name="package_text">package</string>
    <string name="image_open">image/*</string>
    <string name="name">name</string>
    <string name="add_picture">Add picture</string>
    <string name="save">save</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="invalid_email">invalid email</string>
    <string name="add_contact">Add contact</string>
</resources>